kubernetes/base/httproute-api.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-routes
spec:
  parentRefs:
  - name: pokeshop-gateway
    namespace: default
  hostnames:
  - "api.devopswithdev.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /auth
    backendRefs:
    - name: auth-service
      port: 3001
  - matches:
    - path:
        type: PathPrefix
        value: /pokemon
    backendRefs:
    - name: pokemon-service
      port: 3002
  - matches:
    - path:
        type: PathPrefix
        value: /favorites
    backendRefs:
    - name: favorites-service
      port: 3003
